# pdf-knowledge-stock

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: design.md  roadmap.md
examples/: README.md
scripts/: convert_pdf.py
src/pdf_knowledge_stock/: __init__.py  cli.py  config.py  convert.py  images.py  metadata.py  notes.py  openai_cleanup.py
tests/: test_cli.py  test_metadata.py
