[project]
name = "pdf-knowledge-stock"
version = "0.1.0"
description = "Convert slide-style PDF documents into Markdown-based knowledge notes."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Junichiro Morita" }
]
dependencies = [
  "openai>=2.0.0",
  "pymupdf>=1.24.0",
  "pymupdf4llm>=0.0.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
pdf-knowledge-convert = "pdf_knowledge_stock.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_knowledge_stock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
